# delta

./: README.md  format.md  table.md
api/spark/py/: README.md  pyproject.toml
api/spark/py/test/: test.py
